objects/Commissions_Estimator_Line_Item__c.object
<CustomObject>
    <description>Line items used to calculate the commissions estimates.  Initially created by Avengers team during PI 194</description>
    <fields>
        <fullName>CEL_of_Last_Viewed_CE__c</fullName>
        <formula>Commissions_Estimator_Parent__c = Left(  $Setup.Last_Viewed_Commission_Estimator__c.Commission_Estimator_Id__c , 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEL of Last Viewed CE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Outputs the product category based on the product type (name) chosen</description>
        <formula>CASE( DELETE_Product_Type__c , 

&quot;Dental FI HMO&quot;, &quot;Dental&quot;,

&quot;Dental ASO JAA&quot;, &quot;Dental&quot;,

&quot;Vision FI&quot;, &quot;Vision&quot;,

&quot;Vision ASO&quot;, &quot;Vision&quot;,

&quot;Medical&quot;

)</formula>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissions_Estimator_Parent__c</fullName>
        <label>Commissions Estimator Parent</label>
        <referenceTo>Commissions_Estimator__c</referenceTo>
        <relationshipLabel>Commissions Estimator Line Items</relationshipLabel>
        <relationshipName>Commissions_Estimator_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DELETE_Medical__c</fullName>
        <formula>If( Commissions_Estimator_Parent__r.Medical__c = TRUE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DELETE_Test Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DELETE_Product_Type__c</fullName>
        <description>Contains the name or type of product to calculate commissions</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Insured (includes Retail Pharm Incentive)</fullName>
                </value>
                <value>
                    <fullName>GRS - Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Min Prem, ABF</fullName>
                </value>
                <value>
                    <fullName>ASO Only (w/out Rx &amp; Stop Loss; embedded UM/CM)</fullName>
                </value>
                <value>
                    <fullName>Student Health - Fully Insured</fullName>
                </value>
                <value>
                    <fullName>N/W Rental/JAA (JAA L&amp;T and Hospital only)</fullName>
                </value>
                <value>
                    <fullName>Rx Drug - ASO</fullName>
                </value>
                <value>
                    <fullName>Specific Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Student Health - ASO &amp; JAA</fullName>
                </value>
                <value>
                    <fullName>GRS - Medicare Part D</fullName>
                </value>
                <value>
                    <fullName>UM/CM for JAA</fullName>
                </value>
                <value>
                    <fullName>JAA Commercial only</fullName>
                </value>
                <value>
                    <fullName>Aggregate SL - ASO</fullName>
                </value>
                <value>
                    <fullName>Dental FI/HMO</fullName>
                </value>
                <value>
                    <fullName>Dental ASO/JAA</fullName>
                </value>
                <value>
                    <fullName>Vision FI</fullName>
                </value>
                <value>
                    <fullName>Vision ASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_Reference__c</fullName>
        <formula>If( Goal__c = 0, &quot;&quot;, Text(Goal__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <inlineHelpText>Enter the target (goal) number of members for this line item</inlineHelpText>
        <label>Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Shows the Opportunity connected to this Line Item</description>
        <formula>Commissions_Estimator_Parent__r.Opportunity__r.Name</formula>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <description>Calculates the estimated commissions payment for this line item</description>
        <formula>Rate__c *  Total_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <description>Denotes the Commissions Plan Year for which is the Line Item is relevant</description>
        <label>Plan Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>This is the rate for this particular line item.  The rate will be maintained in a separate table within Salesforce and populated here.</description>
        <label>Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sort_field__c</fullName>
        <description>Automatically sets the value based on the product type (name) picklist.  Will be used to sort in the Commissions Parent related list view per the original Excel</description>
        <formula>CASE( DELETE_Product_Type__c , 

&quot;Fully Insured (includes Retail Pharm Incentive)&quot;, 1, 
&quot;GRS - Medicare Advantage&quot;, 2,
&quot;Min Prem, ABF&quot;, 3,
&quot;ASO Only (w/out Rx &amp; Stop Loss; embedded UM/CM)&quot;, 4,
&quot;Student Health - Fully Insured&quot;, 5,
&quot;N/W Rental/JAA (JAA L&amp;T and Hospital only)&quot;, 6,
&quot;Rx Drug - ASO&quot;, 7,
&quot;Specific Stop Loss&quot;, 8,
&quot;Student Health - ASO &amp; JAA&quot;, 9,
&quot;GRS - Medicare Part D&quot;, 10,
&quot;UM/CM for JAA&quot;, 11,
&quot;JAA Commercial only&quot;, 12,
&quot;Aggregate SL - ASO&quot;, 13,
&quot;Dental FI/HMO&quot;, 14,
&quot;Dental ASO/JAA&quot;, 15,
&quot;Vision FI&quot;, 16,
17
)</formula>
        <label>Sort field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestFormula__c</fullName>
        <formula>if( AND(Commissions_Estimator_Parent__r.Medical__c = TRUE,  Category__c = &quot;medical&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestFormula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Members__c</fullName>
        <inlineHelpText>Include the total number of members for this particular line item</inlineHelpText>
        <label>Total Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Commissions Estimator Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Commissions_Estimator_Parent__c</columns>
        <columns>Category__c</columns>
        <columns>DELETE_Product_Type__c</columns>
        <columns>Payment__c</columns>
        <columns>Goal__c</columns>
        <columns>Total_Members__c</columns>
        <columns>Rate__c</columns>
        <columns>Sort_field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Commission_Estimator_Details</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>DELETE_Product_Type__c</columns>
        <columns>Total_Members__c</columns>
        <columns>Rate__c</columns>
        <columns>Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEL_of_Last_Viewed_CE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Members</label>
    </listViews>
    <listViews>
        <fullName>Commission_Estimator_Goals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>DELETE_Product_Type__c</columns>
        <columns>Goal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEL_of_Last_Viewed_CE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Goals</label>
    </listViews>
    <nameField>
        <displayFormat>CELI-{000000}</displayFormat>
        <label>Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions Estimator Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allow_only_FI_and_ASO_goals</fullName>
        <active>false</active>
        <description>Users can only enter goals for Fully Insured and ASO</description>
        <errorConditionFormula>AND(


NOT(ISBLANK(Goal__c)),

NOT(

OR(
ISPICKVAL(DELETE_Product_Type__c , &quot;Fully Insured (includes Retail Pharm Incentive)&quot;),

ISPICKVAL(DELETE_Product_Type__c , &quot;ASO Only (w/out Rx &amp; Stop Loss; embedded UM/CM)&quot;),

ISPICKVAL(DELETE_Product_Type__c , &quot;Dental FI/HMO&quot;),

ISPICKVAL(DELETE_Product_Type__c , &quot;Dental ASO/JAA&quot;),

ISPICKVAL(DELETE_Product_Type__c , &quot;Vision FI&quot;),

ISPICKVAL(DELETE_Product_Type__c , &quot;Vision ASO&quot;)
))

)</errorConditionFormula>
        <errorMessage>You only need to input goals for Fully Insured and ASO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_equal_zero</fullName>
        <active>true</active>
        <description>This is the denominator in a division problem and cannot equal zero</description>
        <errorConditionFormula>Goal__c = 0</errorConditionFormula>
        <errorDisplayField>Goal__c</errorDisplayField>
        <errorMessage>The goal cannot equal zero.  Please enter a valid number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_enter_FI_ASO_goals</fullName>
        <active>true</active>
        <description>Some product types require a goal</description>
        <errorConditionFormula>AND(

ISBLANK (Goal__c ),

NOT(ISBLANK( Total_Members__c )),

 Goal_Eligible__c 

)</errorConditionFormula>
        <errorMessage>You must enter a goal for Fully Insured and ASO line items</errorMessage>
    </validationRules>
</CustomObject>